--- a/index.html
+++ b/index.html
@@ -165,18 +165,21 @@
             Hi! 👋 I'm Abhishek-Ojha, a 21-year-old engineering sophomore pursuing
             BTech in Computer Science & Engineering. I’m a passionate self-learner,
             open source enthusiast, and love solving real-world problems. I'm currently diving deep into the world of
-            Machinelearning engineering , with a focus on platforms like Azure Machinelearnig ,databricks, I also have hands-on
-            experience in cpp dsa, and I'm at a beginner-intermediate level with python.
+            Machinelearning engineering, with a focus on platforms like Azure Machinelearnig, Databricks. I also have hands-on
+            experience in C++ DSA, and I'm at a beginner-intermediate level with Python.
           </p>
-          <div class="about_button">
-            <a download="" href="./assets/img/pesfinalcv (1).pdf" class="button button--flex" target="_blank">
+          <div class="about_buttons" style="display: flex; gap: 1rem;">
+            <a download href="./assets/img/pesfinalcv (1).pdf" class="button button--flex" target="_blank">
               Resume<i class="uil uil-file-download-alt button_icon"></i>
+            </a>
+            <a href="https://youtube.com/shorts/BZqAmlY2UEE?feature=shared" class="button button--flex" target="_blank">
+              Video CV<i class="uil uil-video button_icon"></i>
             </a>
           </div>
         </div>
       </div>
     </section>
-
+    
     <!-- Skills -->
     <section class="skills section" id="skills">
       <h1 class="section_title">Skills</h1>
